[package]
name = "SignallingServer"
version = "0.1.0"
edition = "2021"

[dependencies]
base64 = "0.22.1"
console = "0.15.10"
futures-util = "0.3.31"
rand = "0.8.5"
rustls = "0.23.20"
serde = { version = "1.0.214", features = ["derive"] }
serde_json = "1.0.132"
tokio = { version = "1.41.0", features = ["full"] }
tokio-rustls = "0.26.1"
tokio-tungstenite = "0.24.0"
websocket = "0.27.1"
